# InformaticaToFabric

./: .coverage  .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  GAP_ANALYSIS.md  MIGRATION_PLAN.md  README.md  agentic_alerting.py  ai_converter.py  api_server.py  assistant.py  catalog_integration.py  certification.py  cicd_generator.py  compliance.py  cost_advisor.py  dashboard.py  datadog_integration.py  deploy_dbt_project.py  deploy_to_databricks.py  deploy_to_fabric.py  diff_generator.py  docker-compose.yml  generate_html_reports.py  generate_pptx.py  iac_generator.py  idmc_client.py  migration.yaml  migration_review.py  migration_utils.py  ml_pipeline.py  monitoring_platform.py  plugins.py  pyproject.toml  requirements.txt  rule_engine.py  run_artifact_validation.py  run_assessment.py  (+13 more)
.github/agents/: assessment.agent.md  governance.agent.md  infrastructure.agent.md  migration-orchestrator.agent.md  notebook-migration.agent.md  pipeline-migration.agent.md  sql-migration.agent.md  streaming-migration.agent.md  validation.agent.md
.github/workflows/: ci.yml
benchmarks/: SCALABILITY.md  generate_mappings.py  run_benchmark.py
charts/informatica-migration/: Chart.yaml  values.yaml
docs/: ENTERPRISE_PLAYBOOK.md  RUNBOOK.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/ADR/: 001-multi-agent-architecture.md  002-medallion-architecture.md  003-regex-sql-conversion.md  004-databricks-second-target.md  005-dbt-third-target.md  006-autosys-jil-migration.md
examples/: README.md
examples/plugins/: example_custom_udf.py  example_header_injector.py  example_naming_enforcer.py
input/autosys/: daily_sales_load.jil  finance_etl.jil  standalone_jobs.jil
input/idmc/: api_center_export.json  b2b_export.json  cdgc_export.json  cdi_export.json  cdq_export.json  dih_export.json  marketplace_export.json  mdm_export.json  opinsights_export.json  privacy_export.json
input/mappings/: .gitkeep  IICS_M_CDC_ORDER_PIPELINE.xml  IICS_M_CUSTOMER_360.xml  IICS_M_LOAD_CONTACTS.xml  IICS_M_REALTIME_INVENTORY.xml  M_COMPLEX_MULTI_SOURCE.xml  M_LOAD_CUSTOMERS.xml  M_LOAD_EMPLOYEES.xml  M_LOAD_ORDERS.xml  M_UPSERT_INVENTORY.xml  params_daily_load.prm
input/sessions/: .gitkeep  session_config.xml
input/sql/: .gitkeep  SP_CALC_RANKINGS.sql  SP_DB2_INVENTORY_REFRESH.sql  SP_MYSQL_USER_ANALYTICS.sql  SP_POSTGRESQL_REPORTING.sql  SP_REFRESH_DASHBOARD.sql  SP_SQLSERVER_CUSTOMER_MERGE.sql  SP_TERADATA_CUSTOMER_STATS.sql  SP_UPDATE_ORDER_STATS.sql
k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
output/: Informatica_to_Fabric_Migration_Tool.pptx  Informatica_to_Fabric_Migration_Tool_v2.pptx  agent_learning.db  audit_log.json  azure_monitor_metrics.json  comparison_report.md  dashboard.html  datadog_logs_fallback.jsonl  deployment_log.json  deployment_pipeline.json  manifest.json  migration_issues.md  migration_review_report.json  migration_summary.md  promotion_dev_to_prod.json  promotion_dev_to_test.json  promotion_test_to_prod.json
rules/: README.md  sql_rules.json
templates/: dbt_template.sql  notebook_template.py  notebook_template_databricks.py  pipeline_template.json  pipeline_template_databricks.json  streaming_autoloader.py  streaming_eventhub.py  streaming_kafka.py  validation_template.py
tests/: test_agentic_alerting.py  test_artifact_validation.py  test_autosys.py  test_blueprint_generator.py  test_coverage.py  test_databricks_target.py  test_datadog.py  test_dbt_enhancements.py  test_dbt_target.py  test_e2e.py  test_extended.py  test_functions_migration.py  test_gaps.py  test_idmc_review.py  test_iics.py  test_migration.py  test_monitoring_platform.py  test_phase3_5.py  test_sprint22_24.py  test_sprint25.py  test_sprint26_30.py  test_sprint31_40.py  test_sprint45.py  test_sprint66.py  test_sprint68_70.py  test_sprint71_73.py  test_sprint74_76.py  test_sprint77_79.py  test_sprint80_82.py  test_sprint83_85.py  test_sprint86_88.py  test_sprint89_91.py  test_sprint92_94.py  test_sprint95_97.py  test_sprint98_100.py  update_golden.py
web/: app.py
(+233 files in other folders)
